--- a/3. Data Structures/3.1-Lists.ipynb
+++ b/3. Data Structures/3.1-Lists.ipynb
@@ -113,7 +113,7 @@
    ],
    "source": [
     "print(fruits[1:])\n",
-    "print(fruits[1:3])"
+    "print(fruits[1:3])   # disply from 1 till 2 index"
    ]
   },
   {
@@ -523,7 +523,7 @@
    ],
    "source": [
     "## Iterating with index\n",
-    "for index,number in enumerate(numbers):\n",
+    "for index,number in enumerate(numbers):   # we also get index number when using enumerate.\n",
     "    print(index,number)"
    ]
   },
@@ -566,7 +566,7 @@
     }
    ],
    "source": [
-    "[x**2 for x in range(10)]"
+    "[x**2 for x in range(10)]  # output and operation "
    ]
   },
   {
@@ -698,13 +698,6 @@
     "#### Conclusion\n",
     "List comprehensions are a powerful and concise way to create lists in Python. They are syntactically compact and can replace more verbose looping constructs. Understanding the syntax of list comprehensions will help you write cleaner and more efficient Python code."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
