Add more functions and assignments

--- a/3. Data Structures/3.1.2 list_Assignment.ipynb
+++ b/3. Data Structures/3.1.2 list_Assignment.ipynb
@@ -290,9 +290,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d2dab7fe",
+   "metadata": {},
+   "source": [
+    "### Assignment 9: Matrix Transposition\n",
+    "\n",
+    "Write a function that takes a 3x3 matrix (nested list) as input and returns its transpose. Print the original and transposed matrices."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b02bc89c",
+   "id": "047fa32d",
    "metadata": {},
    "outputs": [],
    "source": []
