--- a/3. Data Structures/3.3.1 sets_assignment.ipynb
+++ b/3. Data Structures/3.3.1 sets_assignment.ipynb
@@ -312,11 +312,294 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "958a54e4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "frozenset({1, 2, 3, 4, 5})\n"
+     ]
+    }
+   ],
+   "source": [
+    "fs = frozenset(range(1,6))\n",
+    "print(fs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8541407c",
+   "metadata": {},
+   "source": [
+    "### Assignment 9: Set and List Conversion\n",
+    "\n",
+    "Create a set with the first 5 positive integers. Convert it to a list, append the number 6, and convert it back to a set. Print the resulting set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "20bc058e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6}\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_set = set(range(1,6))\n",
+    "lst = list(my_set)\n",
+    "\n",
+    "lst.append(6)\n",
+    "result = set(lst)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a87f06e4",
+   "metadata": {},
+   "source": [
+    "### Assignment 10: Set and Dictionary\n",
+    "\n",
+    "Create a dictionary with set keys and integer values. Print the dictionary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a5a514be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{frozenset({1}): 1, frozenset({2}): 2, frozenset({3}): 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#used frozenset to make it immutable and thus no syntax error\n",
+    "\n",
+    "dic = {\n",
+    "    frozenset({1}):1,\n",
+    "    frozenset({2}):2,\n",
+    "    frozenset({3}):3,\n",
+    "}\n",
+    "\n",
+    "print(dic)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3c59ef8",
+   "metadata": {},
+   "source": [
+    "### Assignment 11: Iterating Over Sets\n",
+    "\n",
+    "Create a set and iterate over the elements, printing each element."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5f149fc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_set = set(range(1,21))\n",
+    "\n",
+    "for i in my_set:\n",
+    "    print(i)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2b2a28d",
+   "metadata": {},
+   "source": [
+    "### Assignment 12: Removing Elements from Sets\n",
+    "\n",
+    "Create a set and remove elements from it until it is empty. Print the set after each removal."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "5087c63b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_set = set(range(1,21))\n",
+    "while(my_set):\n",
+    "    my_set.pop() # removes element from the start\n",
+    "    \n",
+    "\n",
+    "print(my_set)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3823e50",
+   "metadata": {},
+   "source": [
+    "### Assignment 13: Set Symmetric Difference Update\n",
+    "\n",
+    "Create two sets and update the first set with the symmetric difference of the two sets. Print the modified first set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "29fce00a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6}\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_set1 = set(range(1,21))\n",
+    "\n",
+    "my_set2 = set(range(7,21))\n",
+    "\n",
+    "my_set1.symmetric_difference_update(my_set2)\n",
+    "print(my_set1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff42ffca",
+   "metadata": {},
+   "source": [
+    "### Assignment 14: Set Membership Testing\n",
+    "\n",
+    "Create a set and test if certain elements are present in the set. Print the results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "dfb25c6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 :element is present\n",
+      "2 :element is present\n",
+      "3 :element is present\n",
+      "4 :element is present\n"
+     ]
+    }
+   ],
+   "source": [
+    "set1 = set(range(1,25))\n",
+    "set2 = set(range(1,5))\n",
+    "for i in set1:\n",
+    "    for j in set2:\n",
+    "        if(j==i):\n",
+    "            print(f\"{j} :element is present\")\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "da1b392a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = set(range(1, 6))\n",
+    "print(3 in s)\n",
+    "print(6 in s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f6abfe1",
+   "metadata": {},
+   "source": [
+    "### Assignment 15: Set of Tuples\n",
+    "\n",
+    "Create a set containing tuples, where each tuple contains two elements. Print the set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "f004e62f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{(4, 4), (1, 2), (9, 9)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "set_tup = {(1,2),(4,4),(9,9)}\n",
+    "print(set_tup)"
+   ]
   }
  ],
  "metadata": {
