Add assignment 10 solution

--- a/6. File_handling/filehandlingassignment.ipynb
+++ b/6. File_handling/filehandlingassignment.ipynb
@@ -314,11 +314,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "423c5fd5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def split_file(filename, lines_per_file):\n",
+    "    with open(filename, 'r') as file:\n",
+    "        lines = file.readlines()\n",
+    "    for i in range(0, len(lines), lines_per_file):    # syntax => range(start, stop, step)\n",
+    "        with open(f'{filename}_part{i//lines_per_file + 1}.txt', 'w') as part_file:\n",
+    "            part_file.writelines(lines[i:i + lines_per_file])\n",
+    "\n",
+    "# Test\n",
+    "# split_file('large.txt', 100)\n",
+    "            "
+   ]
   },
   {
    "cell_type": "markdown",
