Add assignment solution for conditions statements

--- a/2. Control flow/assignment_solutions.ipynb
+++ b/2. Control flow/assignment_solutions.ipynb
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,87 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "number = int(input(\"enter a number\"))\n",
+    "is_prime = True\n",
+    "\n",
+    "if number<=1:\n",
+    "    is_prime = False\n",
+    "else:\n",
+    "    for i in range(2,int(number**0.5)+1):  # +1 for endpoint value. for range \n",
+    "        if number%i==0:\n",
+    "            is_prime = False\n",
+    "            break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Assignment 15: Fibonacci Sequence\n",
+    "\n",
+    "Write a program that prints the first n Fibonacci numbers, where n is input by the user."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fib(n):\n",
+    "    if n==0:\n",
+    "        return 0\n",
+    "    elif n==1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return (fib(n-1) + fib(n-2))\n",
+    "\n",
+    "number = int(input(\"enter a number\"))\n",
+    "for i in range(0,number):\n",
+    "    print(fib(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# this is a better approach as it can handle large values of n\n",
+    "\n",
+    "n = int(input(\"Enter the number of Fibonacci numbers to print: \"))\n",
+    "a, b = 0, 1\n",
+    "count = 0\n",
+    "while count<n:\n",
+    "    print(a)\n",
+    "    a,b = b,a+b\n",
+    "    count+=1"
+   ]
   }
  ],
  "metadata": {
